--- a/Gestion de Projet/Readme
+++ b/Gestion de Projet/Readme
@@ -1,1 +1,3 @@
-
+Dans cette partie vous trouverez tous les documentd que nous avons utiliser pour:
+-nous répartir les taches
+-choisir les  composants
