--- a/Gestion de Projet/Readme
+++ b/Gestion de Projet/Readme
@@ -1,3 +1,3 @@
 Dans cette partie vous trouverez tous les documents que nous avons utilisés pour:
-- nous répartir les tâches
+- nous répartir les tâches (non suivi)
 - choisir les  composants
